--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/image": "^0.14.1",
     "@astrojs/mdx": "^0.16.0",
     "@astrojs/partytown": "^1.0.3",
+    "@astrojs/react": "^2.1.0",
     "@astrojs/rss": "^2.1.0",
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^3.0.1",
@@ -36,6 +37,8 @@
     "mdast-util-to-string": "^3.1.1",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "sharp": "^0.31.3",
     "subfont": "^6.12.4",
@@ -45,5 +48,8 @@
   },
   "engines": {
     "node": ">=16.12.0"
+  },
+  "dependencies": {
+    "markdown-it": "^13.0.1"
   }
 }
